composites/todo-service/todo-service-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: todo-service-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
spec:
  rules:
    - host: todo-service.com
      http:
        paths:
          - backend:
              serviceName: todos--todos-service
              servicePort: 8080
            path: /
